[workspace]
members = [
    ".",
    "rbs",
    "codegen",
    "macro_driver",
    "interface"
]
[package]
name = "ncti_orm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rbs = { version = "0.1.0", path = "rbs" }
macro_driver = { version = "0.1.0", path = "macro_driver" }
codegen = { version = "0.1.0", path = "codegen"}
interface = {path = "interface"}
quote = "1.0"
regex = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
syn = { version = "1.0", features = ["full"] }
fastdate = { version = "0.1"}
deadpool = {version="0.9.5", features = ["managed"] }
tokio = { version = "1", features = ["full"] }
# actix for unit test
actix-rt = "*"
libc = "0.2"