cmake_minimum_required(VERSION 3.14.1)

# project(kv_executor)
# # open source include
# set(GSTOR_SRC_HOME ${CMAKE_CURRENT_SOURCE_DIR}/../../)

# include_directories(${GSTOR_SRC_HOME})
# include_directories(${INTARKDB_GSTOR_INC_PATH})
# include_directories(${INTARKDB_SECUREC_INC_PATH})

# aux_source_directory(. STORAGE_SRC)

# add_compile_options(-fvisibility=hidden)

# add_library(storage SHARED ${STORAGE_SRC})

# target_link_libraries(storage PUBLIC gstor pthread dl m rt ${G_BIN_EXT_LIBS})
